2009-07-13  Richard Guenther  <rguenther@suse.de>

PR lto/40721
	* lto-opts.c (register_user_option_p): Handle OPT_fcommon.
	(handle_common_option): Likewise.
	* lto-symtab.c (lto_symtab_merge_decl): Merge re-definitions
	if flag_no_common is not set.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/lto@149587 138bc75d-0d04-0410-961f-82ee72b054a4